## Makefile.am for tuxmath test client:
## Process with Automake to create Makefile.in

bin_PROGRAMS = tuxmathtestclient


tuxmathtestclient_SOURCES = testclient.c \
                            ../src/throttle.c \
                            ../src/network.c  \
                            ../src/options.c  \
                            ../src/mathcards.c

EXTRA_DIST = testclient.h
